[gd_scene load_steps=5 format=2]

[ext_resource path="res://MielMonteur.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Win11.tscn" type="PackedScene" id=3]
[ext_resource path="res://Win11TrashCan.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="MielMonteur" parent="." instance=ExtResource( 1 )]
z_index = 2

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 960, 540 )

[node name="Win11" parent="." instance=ExtResource( 3 )]

[node name="Win11TrashCan" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="slash" from="MielMonteur" to="." method="_on_MielMonteur_slash"]
[connection signal="body_entered" from="Win11TrashCan" to="." method="_on_Win11TrashCan_body_entered"]
[connection signal="body_exited" from="Win11TrashCan" to="." method="_on_Win11TrashCan_body_exited"]
